<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:background="@color/blue_theme"
            android:fontFamily="@font/raleway_semibold"

            android:gravity="center"
            android:text="@string/info_section"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"

            android:text="@string/graded_motor_imaging"
            android:textSize="27sp"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"

            android:textSize="20sp"
            android:text="@string/gmi_info"
            />

    </LinearLayout>

</ScrollView>

