<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:background="@color/blue_theme"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/switch_reminder"
        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="@string/reminder"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/laterality_reminder"
        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="@string/laterality_training"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/laterality_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:fontFamily="@font/raleway"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/laterality_hint"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/select_time"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/grey_secondary"
        android:fontFamily="@font/raleway"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"

        android:gravity="center"
        android:text="@string/select_time"
        android:textColor="@color/black"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/set_alarm"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/blue_tertiary"
        android:fontFamily="@font/raleway_semibold"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"

        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/set_reminder"
        android:textColor="@color/black"
        android:textSize="12sp"

        android:onClick="setAlarm" />


    <TextView
        android:id="@+id/cancel_alarm"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"

        android:text="@string/cancel"
        android:gravity="center_vertical"
        android:textColor="@color/blue_link"
        android:textSize="12sp"

        android:onClick="cancelAlarm"
        />

    <TextView
        android:id="@+id/motor_reminder"
        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="@string/motor_imagery"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/motor_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:fontFamily="@font/raleway"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/motor_hint"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/motor_select_time"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/grey_secondary"
        android:fontFamily="@font/raleway"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"

        android:gravity="center"
        android:text="@string/select_time"
        android:textColor="@color/black"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/motor_set_alarm"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/blue_tertiary"
        android:fontFamily="@font/raleway_semibold"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"

        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/set_reminder"
        android:textColor="@color/black"
        android:textSize="12sp"

        android:onClick="setAlarm" />


    <TextView
        android:id="@+id/motor_cancel_alarm"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"

        android:text="@string/cancel"
        android:gravity="center_vertical"
        android:textColor="@color/blue_link"
        android:textSize="12sp"

        android:onClick="cancelAlarm"
        />

    <TextView
        android:id="@+id/mirror_reminder"
        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="@string/mirror_therapy"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/mirror_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:fontFamily="@font/raleway"

        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mirror_hint"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mirror_select_time"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/grey_secondary"
        android:fontFamily="@font/raleway"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"

        android:gravity="center"
        android:text="@string/select_time"
        android:textColor="@color/black"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/mirror_set_alarm"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/blue_tertiary"
        android:fontFamily="@font/raleway_semibold"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"

        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/set_reminder"
        android:textColor="@color/black"
        android:textSize="12sp"

        android:onClick="setAlarm" />


    <TextView
        android:id="@+id/mirror_cancel_alarm"
        android:layout_width="90dp"
        android:layout_height="25dp"

        android:background="@color/white"
        android:fontFamily="@font/raleway"

        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"

        android:text="@string/cancel"
        android:gravity="center_vertical"
        android:textColor="@color/blue_link"
        android:textSize="12sp"

        android:onClick="cancelAlarm"
        />

</LinearLayout>

</ScrollView>