<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="34dp"

            android:background="@color/blue_theme"
            android:fontFamily="@font/raleway_semibold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="35dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <EditText
            android:id="@+id/enter_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="35dp"

            android:background="@drawable/bg_input"
            android:drawableStart="@drawable/person_circle"
            android:drawablePadding="30dp"
            android:ems="10"

            android:fontFamily="@font/raleway"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:paddingStart="26dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColorHint="@color/grey_input"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/enter_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="35dp"

            android:background="@drawable/bg_input"
            android:drawableStart="@drawable/telephone"
            android:drawablePadding="30dp"
            android:ems="10"

            android:fontFamily="@font/raleway"
            android:hint="@string/enter_cell_number"
            android:inputType="phone"
            android:paddingStart="26dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColorHint="@color/grey_input"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="35dp"
            android:background="@drawable/bg_input"
            android:drawableStart="@drawable/envelope"

            android:drawablePadding="30dp"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"

            android:paddingStart="26dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"

            android:textColorHint="@color/grey_input"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/enter_pw"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:layout_gravity="center"

            android:layout_marginBottom="35dp"
            android:background="@drawable/bg_input"

            android:drawableStart="@drawable/lock"
            android:drawablePadding="30dp"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/enter_password"

            android:inputType="textPassword"
            android:paddingStart="26dp"
            android:paddingTop="14dp"

            android:paddingBottom="14dp"
            android:textColorHint="@color/grey_input"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/confirm_pw"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:layout_gravity="center"

            android:layout_marginBottom="48dp"
            android:background="@drawable/bg_input"

            android:drawableStart="@drawable/lock"
            android:drawablePadding="30dp"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/confirm_password"


            android:inputType="textPassword"
            android:paddingStart="26dp"
            android:paddingTop="14dp"

            android:paddingBottom="14dp"
            android:textColorHint="@color/grey_input"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="230dp"
            android:layout_height="59dp"
            android:layout_gravity="center"

            android:background="@drawable/bg_button"

            android:fontFamily="@font/raleway_semibold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"

            app:backgroundTint="@color/blue_tertiary"
            app:cornerRadius="35dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="35dp">

            <ImageView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/volume_float_mute"

                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:visibility="invisible"
                />

            <ImageView
                android:id="@+id/mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/volume_float"

                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                />

        </RelativeLayout>

    </LinearLayout>


</ScrollView>


